Prevent Content overlaping with Navbar

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -13,3 +13,8 @@
 .header-content p.header-sub-content {
   font-size: 30px;
 }
+
+body {
+  /* Avoid Navbar overlaping */
+  padding-top: 50px;
+}
